# customer-support-agent

./: README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  __init__.py
backend/app/: main.py  settings.py
backend/app/api/: __init__.py  health.py
backend/app/api/auth/: __init__.py  deps.py  jwks_fetcher.py  jwks_snapshot.json
backend/app/api/rest/: __init__.py  conversations.py  schemas.py
backend/app/api/websockets/: __init__.py  chat.py
backend/app/db/: __init__.py  base.py  engine.py  migrations.py  session.py
backend/app/domain/: __init__.py  conversation.py  message.py  user.py
backend/app/services/: __init__.py  agent_cache.py  chat_turn.py  conversation_service.py  foundry.py  foundry_stream.py  stream_events.py  text_sanitizer.py  user_service.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: __init__.py  conftest.py  test_deps.py  test_jwks_fetcher.py  test_user_service.py
backend/tests/api/rest/: __init__.py  conftest.py  test_conversations.py
backend/tests/api/websockets/: __init__.py  test_chat_endpoint.py
backend/tests/db/: __init__.py  conftest.py  test_alembic.py  test_conversation_model.py  test_message_model.py  test_user_model.py
backend/tests/services/: conftest.py  test_chat_turn.py  test_conversation_service.py  test_foundry.py  test_foundry_stream.py  test_settings.py
example/: .env  001-support-agent.py  002-batman-agent-streaming.py  app.py  fetch_jwks.py  (+1 more)
(+52 files in other folders)
